--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,10 @@
 <body>
 
   <div class="row">
-    <h1 align="center" class="text-primary"> Hangman!</h1>
+    <h1 align="center" class="text-primary"> Hangman! <br>Luxury Cars Category</br></h1>
+    
   </div>
+
   <div class="row">
     <h2>
       <span align="center" class="text-muted" id='starting'> </span>
