--- a/index2.html
+++ b/index2.html
@@ -5,13 +5,17 @@
 
   <title>Hangman!</title>
 
+  <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 
+<section id="content">
   <div class="row">
-    <h1 align="center" class="text-primary"> Hangman! <br>Luxury Cars Category</br></h1>
-    
+    <h1 align="center" class="text-primary"> Hangman!
+      <br>Luxury Cars Category</br>
+    </h1>
+
   </div>
 
   <div class="row">
@@ -42,8 +46,10 @@
       <span id='guessedLetters'></span>
     </div>
   </div>
+</section>
+
+
   <script>
- 
     // Answer Array.
 
     var luxcarBrandsArr = ["alfa romeo", "aston martin", "land rover", "range rover", "lamborgini", "tesla", "hummer",
